flaca.template shows a cloze test now

--- a/flaca.template
+++ b/flaca.template
@@ -58,6 +58,7 @@ echo "\\usepackage{enumerate}"
 echo "\\usepackage{graphicx}"
 echo "\\usepackage{ifthen}"
 echo "\\usepackage{siunitx}"
+echo "\\usepackage{soulutf8}"
 echo "\\usepackage{tikz}"
 echo "\\usepackage{url}"
 echo
@@ -148,24 +149,42 @@ echo "%"
 echo "%"
 echo "\\newcommand{\\vstrut}{\\vphantom{\\ensuremath{(}}}"
 echo
+echo "% --------"
+echo "% clozegap"
+echo "% --------"
+echo "%"
+echo "%"
+echo "%"
+echo "\\newcommand{\\clozegap}[2]{{\\color{#1}\\ul{#2}}}"
+echo
 echo "% ------------------------------------------------------------------------------"
 echo "\\begin{document}"
 echo "% ------------------------------------------------------------------------------"
 echo
+echo "\\newcommand{\\cloze}[1]"
+echo "{%"
+echo "  \\begin{minipage}{0.8\\linewidth}%"
+echo "    Ein Lückentext ist ein Text, in dem \\clozegap{#1}{Buchstaben},"
+echo "    \\clozegap{#1}{Silben}, \\clozegap{#1}{Wörter} oder \\clozegap{#1}{Satzteile}"
+echo "    ausgelassen wurden. Die Testteilnehmer oder Schüler sind aufgefordert,"
+echo "    die fehlenden Textteile (Textlücken) zu \\clozegap{#1}{ergänzen}."
+echo "  \\end{minipage}%"
+echo "}%"
+echo
 echo "\\begin{CENTER}"
-echo "  \\Huge"
+echo "  \\Large"
 echo "  \\sffamily"
 echo "  \\bfseries"
-echo "  Frage"
+echo "  \\cloze{white}"
 echo "\\end{CENTER}"
 echo
 echo "\\clearpage"
 echo
 echo "\\begin{CENTER}"
-echo "  \\Huge"
+echo "  \\Large"
 echo "  \\sffamily"
 echo "  \\bfseries"
-echo "  Antwort"
+echo "  \\cloze{blue}"
 echo "\\end{CENTER}"
 echo
 echo "% ------------------------------------------------------------------------------"
